[package]
name = 'mfo-api'
version = '0.1.0'
authors = ['Paul-Sebastian Manole <brokenthorn@gmail.com>']
description = 'MiniFarmOnline API'
edition = '2018'

[dependencies]
anyhow = '1.0.31'
dotenv = '0.15.0'
futures = '0.3.5'
jsonwebtoken = '7.2.0'
serde_json = '1.0.56'
tide = '0.12.0'
http = '0.2.1'

[dependencies.uuid]
version = '0.8.1'
features = [
    'serde',
    'v4',
]

[dependencies.async-std]
version = '1.6.2'
features = ['attributes']

[dependencies.tiberius]
version = '0.4.7'
default-features = false
features = [
    'chrono',
    'tds73',
]

[dependencies.chrono]
version = '0.4.13'
features = ['serde']

[dependencies.serde]
version = '1.0.114'
features = ['derive']
