[package]
name = 'mfo-api'
version = '0.1.0'
authors = ['Paul-Sebastian Manole <brokenthorn@gmail.com>']
description = 'MiniFarmOnline API'
edition = '2018'

[dependencies]
anyhow = '1.0.32'
dotenv = '0.15.0'
futures = '0.3.5'
http = '0.2.1'
jsonwebtoken = '7.2.0'
rust_decimal = '^1.6'
serde_json = '1.0.57'
tide = '0.13.0'
tide-compress = '^0.5.0'

[dependencies.uuid]
version = '0.8.1'
features = [
    'serde',
    'v4',
]

[dependencies.async-std]
version = '1.6.2'
features = ['attributes']

[dependencies.tiberius]
version = '0.4.8'
default-features = false
features = [
    'chrono',
    'rust_decimal',
    'tds73',
]

[dependencies.chrono]
version = '0.4.13'
features = ['serde']

[dependencies.serde]
version = '1.0.114'
features = ['derive']
